# VULKEN-3D-WORLD

./: .eslintignore  .eslintrc.json  .gitignore  BUILD_TAGS.txt  CMakeLists.txt  INTEGRATION_STEPS.md  README.md  README_SUPERBUILD.md  ai_palette.cfg  automerge.yaml  backend_test.py  build_cfg_fulllog.txt  diagnostics_report.md  eslint.config.cjs  eslint.config.js  mypy.ini  package-lock.json  package.json  pytest.ini  requirements.txt  test_result.md  test_vma_integration  test_vma_integration.cpp  world_lod.cfg
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake.yml  codeql.yml  physics.yml  python-ci.yml
__tests__/: sample.test.js
apps/: CMakeLists.txt  demo_window.cpp  smoke_graphics_headless.cpp  smoke_headless.cpp  viewer.cpp  vulkan_bootstrap.cpp
apps/shaders/: Makefile
assets/config/: materials.json
assets/worldgen/: noise_config.json
backend/: .env  main.py
build_ci_sanity/: CMakeCache.txt
build_novk/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
build_test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  smoke_headless  vulkan_bootstrap
cmake/: Dependencies.cmake  GenBuildInfo.cmake  GuardNoCuda.cmake  try_no_cuda_guard.cpp
config/: training_vulkan.yaml
docs/: CMAKE_PATCH_SNIPPET.txt  CSM_DESCRIPTOR_LAYOUT.md  CSM_TEXEL_SNAP_DEBUG.md  DESCRIPTOR_PLAN.md  INTEGRATE_BUILD_TAGGING.md  INTEGRATE_CSM_PCSS.md  INTEGRATION_NOTES.md  MYPY_EXCLUSIONS.md  QUICKSTART.md  WIRE_CSM_LIGHTING.md  WORLD_ARCHITECTURE.md  chunk_cache.md  chunkstore_player_controller.md  diff_voxelize_build.md  materials.md  memory_allocators.md  synchronization.md
frontend/: .env  dashboard.js  index.html  style.css
scripts/: build.sh  build_diff_voxelize.py  export_world_to_html.py  perform_merge.py  validate_shaders.py
shaders/ibl/: brdf_lut.frag  equirect_to_cubemap.comp  equirect_to_cubemap.frag  irradiance_convolution.comp  pmrem_prefilter.comp  pmrem_prefilter.frag
shaders/lighting/: ibl.glsl  pbr_lit.frag  pbr_lit.vert  pcss.glsl
shaders/meshing/: greedy.comp
shaders/post/: atmosphere.frag  clouds.frag
shaders/shadows/: csm_common.glsl
shaders_vk/: diff_voxelize.comp.glsl  frustum_cull.comp.glsl  greedy_meshing.comp.glsl  sdf_jump_flood.comp.glsl  voxel_fill.comp.glsl  voxelize_sat.comp.glsl
shaders_vk/ai/: blockize.comp.glsl
shaders_vk/common/: fullscreen.vert.glsl
shaders_vk/ibl/: brdf_lut.comp.glsl
shaders_vk/lighting/: csm_binding.glsl  pbr_common.glsl  pbr_lighting.frag.glsl  pbr_lighting.vert.glsl  pbr_lit.frag.glsl  pbr_lit.vert.glsl  pbr_pcss.frag.glsl  pcss.glsl  use_csm_pcss_example.glsl
shaders_vk/post/: atmosphere.frag.glsl  clouds.frag.glsl
shaders_vk/shadows/: csm_common.glsl  csm_debug.glsl  csm_depth.frag.glsl  csm_depth.vert.glsl
shaders_vk/voxelize/: voxelize.frag.glsl  voxelize.vert.glsl
src/: __init__.py  main.cpp  mypy_placeholder.py  vk_elite.cpp  voxel.cpp  voxel_meshing.hpp
src/ai/: __init__.py  ai_apply_to_engine_native.cpp  ai_apply_to_engine_native.hpp  ai_biome_palette.cpp  ai_biome_palette.hpp  ai_gpu_blockize.cpp  ai_gpu_blockize.hpp  ai_imgui_palette_panel.cpp  ai_imgui_palette_panel.hpp  ai_mesher_bridge_voxelvk.cpp  ai_mesher_bridge_voxelvk.hpp  ai_object_generator.hpp  ai_palette_config_io.cpp  ai_palette_config_io.hpp  ai_palette_to_mesher.cpp  ai_palette_to_mesher.hpp  diff_voxelize.cpp  diff_voxelize.py
src/core/: build_info.hpp.in  build_info_print.cpp  build_info_print.hpp  gpu_compat.cpp  gpu_compat.hpp  hotkey_glfw_example.md  runtime_debug.cpp  runtime_debug.hpp
src/physics/: __init__.py  aabb.py  capsule.py  capsule_voxel_sat.py  player_controller.py  player_controller_capsule.py  player_controller_capsule.pyi  voxel_solid.py
src/physics_cpp/: aabb.hpp  capsule.hpp  capsule_voxel_sat.hpp  physics_c_api.cpp  player_controller.hpp  vec3.hpp
src/render/: allocators.cpp  allocators.hpp  chunk_drawer.cpp  chunk_drawer.hpp  csm.cpp  csm.hpp  csm_cpu.cpp  csm_cpu.hpp  csm_descriptor.hpp  csm_layout.cpp  csm_layout.hpp  csm_pass.cpp  csm_pass.hpp  culling.hpp  culling.py  descriptor_pool.cpp  descriptor_pool.hpp  frame_allocator.cpp  frame_allocator.hpp  frame_graph.cpp  frame_graph.hpp  frustum_cull.hpp  global_layout.cpp  global_layout.hpp  ibl_brdf.cpp  ibl_brdf.hpp  ibl_cube_pass.cpp  ibl_cube_pass.hpp  ibl_environment.cpp  ibl_environment.hpp  ibl_pipeline.cpp  ibl_pipeline.hpp  imgui_layer.cpp  imgui_layer.hpp  indirect_batch.py  lighting_pass.cpp  lighting_pass.hpp  material_manager.cpp  material_manager.hpp  meshing_pass.cpp  (+26 more)
src/renderer/: __init__.py  ibl.py  material_manager.py  pbr.py  resource_manager.py  shadow_cascades.py
src/utils/: async_io.py  logging_config.py
src/vk/: alloc_helpers.cpp  alloc_helpers.hpp  allocator.cpp  allocator.hpp  barrier_helpers.hpp  debug_utils.hpp  frame_graph.hpp  swapchain.cpp  swapchain.hpp  vma_allocator.cpp  vma_allocator.hpp  vma_helpers.cpp  vma_helpers.hpp
src/world/: chunk.py  chunk_cache.cpp  chunk_cache.hpp  chunk_cache.py  chunk_lod.hpp  chunk_manager.py  chunk_streamer.cpp  chunk_streamer.hpp  game.py  generator.py  greedy_mesher.py  lod_component.cpp  lod_component.hpp  material_manager.cpp  material_manager.hpp  mesher_cpu.cpp  mesher_gpu.cpp  persistence.cpp  persistence.hpp  persistence.py  resource_manager.cpp  resource_manager.hpp  rle.py  svo.hpp  svo_builder.cpp  (+5 more)
tests/: conftest.py  physics_cpp_stub.cpp  test_async_io.py  test_capsule_ground.py  test_capsule_properties.py  test_chunk_cache.py  test_chunk_manager.py  test_chunk_store.py  test_chunk_store_cpp.py  test_chunkstore.py  test_culling_batch.py  test_diff_voxelize.py  test_diff_voxelize_platform.py  test_greedy_mesher.py  test_material_manager.py  test_perform_merge.py  test_persistence_manifest.py  test_player_controller_aabb.py  test_player_controller_capsule.py  test_rle.py  test_voxel_solid.py  test_worldgen_assets.py  test_worldgen_noise.py  test_worldgen_smoke.py
tools/: envmap_preprocess.py
(+30 files in other folders)
